# learnPython

./: .env  database.py  day1.py  main.py  models.py  pyproject.toml  read.md
sql/: add_posts_user_id.sql
笔记/: code.md  python学习日记.md  踩坑日记.md
